# dive-data-platform

./: .gitignore  LICENSE  README.md
app_api/: pyproject.toml
app_api/src/app/: config.py  db.py  main.py  schemas.py
infra/: docker-compose.yml
infra/sql/: 01_oltp_schema.sql  02_analytics_schema.sql  03_oltp_migrations.sql  04_seed.sql
